# crabllm

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  architecture.html  benchmarks.html  configuration.html  docker.html  getting-started.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-73748186.js  searchindex-e877b029.js  toc-1f18b02d.js  toc-8afd4b46.js  toc.html
.claude/: settings.json
.github/workflows/: docker.yml  docs.yml  main.yml
api/: index.html
crates/bench/: Cargo.toml  Dockerfile  README.md  bench  bench.py  chart.py  compare-local.sh  compare.sh  docker-compose.yml  run.sh
crates/bench/config/: bench-docker.toml  bench-ext.toml  bench.toml  bifrost.json  litellm-local.yaml  litellm-log.yaml  litellm.yaml
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  error.rs  extension.rs  json.rs  lib.rs  model_info.rs  openapi.rs  provider.rs  storage.rs  storage_redis.rs  storage_sqlite.rs
crates/core/src/types/: anthropic.rs  audio.rs  chat.rs  embedding.rs  image.rs  mod.rs  model.rs  multipart.rs
crates/crabctl/: Cargo.toml
crates/crabctl/src/: client.rs  config.rs  error.rs  lib.rs  output.rs  types.rs
crates/crabllm/: Cargo.toml
crates/crabllm-llamacpp/: Cargo.toml
crates/crabllm-llamacpp/src/: download.rs  lib.rs  pool.rs  proxy.rs  registry.rs  server.rs
crates/crabtalk/: Cargo.toml  README.md
crates/llamacpp/: Cargo.toml
crates/llamacpp/src/: download.rs  lib.rs  pool.rs  server.rs
crates/llamars/: Cargo.toml
crates/llamars/src/: download.rs  lib.rs  proxy.rs
crates/mlx/: Cargo.toml  build.rs
crates/mlx/examples/: chat.rs  tool_capability.rs  vlm_smoke.rs
crates/mlx/src/: download.rs  ffi.rs  gemma_patch.rs  lib.rs  metallib.rs  model.rs  pool.rs  provider.rs  registry.rs  session.rs  stub.rs  tool_parser.rs
crates/mlx/tests/: download_smoke.rs  download_unit.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: client.rs  lib.rs  llamacpp.rs  openai_compat.rs  registry.rs
crates/provider/src/client/: hyper.rs  reqwest.rs
crates/provider/src/provider/: anthropic.rs  azure.rs  bedrock.rs  google.rs  mod.rs  openai.rs
crates/proxy/: Cargo.toml  README.md
crates/proxy/src/: admin.rs  admin_models.rs  admin_providers.rs  auth.rs  handlers.rs  lib.rs  openapi.rs  state.rs
crates/proxy/src/anthropic/: handler.rs  mod.rs  translate.rs
crates/proxy/src/ext/: audit.rs  budget.rs  cache.rs  logging.rs  mod.rs  rate_limit.rs  usage.rs
crates/proxy/src/storage/: mod.rs  redis.rs  sqlite.rs
crates/proxy/tests/: usage_events.rs
docker/: bench-runner.Dockerfile
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  benchmarks.md  configuration.md  docker.md  getting-started.md  introduction.md
docs/src/features/: auth.md  extensions.md  routing.md  storage.md  streaming.md
docs/src/providers/: anthropic.md  azure.md  bedrock.md  google.md  ollama.md  openai.md  overview.md
features/: auth.html  extensions.html  routing.html  storage.html  streaming.html
mlx/: Makefile  Package.swift
mlx/Sources/CrabllmMlx/: MessageParsing.swift  Pool.swift  Session.swift
mlx/include/: crabllm_mlx.h
mlx/tests/: smoke.c
models/: cloud.toml  local.toml
providers/: anthropic.html  azure.html  bedrock.html  google.html  ollama.html  openai.html  overview.html
scripts/: update_cloud_models.py  update_local_models.py
