[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance LLM API gateway"
repository = "https://github.com/clearloop/crabtalk"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["web-programming::http-server", "network-programming"]

[workspace.dependencies]
crabtalk-core = { version = "0.0.6", path = "crates/core" }
crabtalk-provider = { version = "0.0.6", path = "crates/provider" }
crabtalk-proxy = { version = "0.0.6", path = "crates/proxy" }
crabtalk-bench = { version = "0.0.6", path = "crates/bench" }
crabtalk = { version = "0.0.6", path = "crates/crabtalk" }

# crates-io
axum = { version = "0.8", features = ["multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
toml = "0.8"
tower = "0.5"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
