[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.9"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance LLM API gateway"
repository = "https://github.com/clearloop/crabllm"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["web-programming::http-server", "network-programming"]

[workspace.dependencies]
crabllm-core = { version = "0.0.9", path = "crates/core" }
crabllm-provider = { version = "0.0.9", path = "crates/provider" }
crabllm-proxy = { version = "0.0.9", path = "crates/proxy" }
crabllm-bench = { version = "0.0.9", path = "crates/bench" }
crabllm = { version = "0.0.9", path = "crates/crabllm" }
crabllm-llamacpp = { version = "0.0.9", path = "crates/llamacpp" }

# crates-io
axum = { version = "0.8", features = ["multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
toml = "0.8"
tower = "0.5"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.11"
redis = { version = "1", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ureq = "3"
which = "8"
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
dirs = "6"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
