[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.17"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance LLM API gateway"
repository = "https://github.com/crabtalk/crabllm"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["web-programming::http-server", "network-programming"]

[workspace.dependencies]
crabllm-core = { version = "0.0.17", path = "crates/core" }
crabllm-provider = { version = "0.0.17", path = "crates/provider", default-features = false }
crabllm-proxy = { version = "0.0.17", path = "crates/proxy" }
crabllm-bench = { version = "0.0.17", path = "crates/bench" }
crabllm = { version = "0.0.17", path = "crates/crabllm" }
crabllm-llamacpp = { version = "0.0.17", path = "crates/llamacpp" }
crabllm-mlx = { version = "0.0.17", path = "crates/mlx" }
crabctl = { version = "0.0.17", path = "crates/crabctl" }

# crates-io
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-core = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "http2", "tls12", "native-tokio", "logging"] }
hyper-tls = "0.6"
native-tls = { version = "0.2", features = ["alpn"] }
http-body-util = "0.1"
http = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
toml = "0.8"
tower = "0.5"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.11"
redis = { version = "1", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ureq = "3"
hf-hub = "0.5"
which = "8"
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
dirs = "6"
arc-swap = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

[profile.prod]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
strip = true

[workspace.metadata.conta]
