[package]
name = "crabtalk-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Mock OpenAI backend for benchmarking crabtalk"
keywords = ["llm", "benchmark", "mock", "openai", "testing"]
categories = ["development-tools::testing"]

[[bin]]
name = "crabtalk-bench"
path = "src/bin/main.rs"

[dependencies]
crabtalk-core.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
