[package]
name = "crabllm-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Mock OpenAI backend for benchmarking crabllm"
keywords = ["llm", "benchmark", "mock", "openai", "testing"]
categories = ["development-tools::testing"]

[[bin]]
name = "crabllm-bench"
path = "src/bin/main.rs"

[dependencies]
crabllm-core.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
