[package]
name = "crabtalk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
storage-redis = ["redis"]
storage-sqlite = ["sqlx"]

[dependencies]
# crates-io
axum.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

# optional
redis = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
