[package]
name = "crabllm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core types for the crabllm LLM API gateway"
keywords = ["llm", "openai", "api", "types", "gateway"]
categories = ["data-structures", "web-programming"]

[features]
gateway = ["toml"]
openapi = ["utoipa"]
sonic = ["dep:sonic-rs"]

[dependencies]
# crates-io
bytes.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sonic-rs = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
