[package]
name = "crabctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for managing a running crabllm gateway"
keywords = ["llm", "gateway", "admin", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "crabctl"
path = "src/bin/main.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
