[package]
name = "crabllm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-performance LLM API gateway — binary"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming::http-server"]

[features]
default = ["rustls", "llamacpp"]
native-tls = ["crabllm-proxy/native-tls"]
rustls = ["crabllm-proxy/rustls"]
storage-redis = ["crabllm-proxy/storage-redis"]
storage-sqlite = ["crabllm-proxy/storage-sqlite"]
provider-bedrock = ["crabllm-provider/provider-bedrock"]
llamacpp = ["dep:crabllm-llamacpp"]

[[bin]]
name = "crabllm"
path = "src/bin/main.rs"

[dependencies]
crabllm-core = { workspace = true, features = ["gateway"] }
crabllm-llamacpp = { workspace = true, optional = true }
crabllm-provider.workspace = true
crabllm-proxy.workspace = true

# crates-io
axum.workspace = true
bytes.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus.workspace = true
