[package]
name = "crabllm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-performance LLM API gateway — binary"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming::http-server"]

[features]
default = ["native-tls", "openapi"]
native-tls = ["crabllm-proxy/native-tls"]
rustls = ["crabllm-proxy/rustls"]
storage-redis = ["crabllm-proxy/storage-redis"]
storage-sqlite = ["crabllm-proxy/storage-sqlite"]
provider-bedrock = ["crabllm-provider/provider-bedrock"]
openapi = ["crabllm-proxy/openapi", "utoipa", "utoipa-scalar"]

[[bin]]
name = "crabllm"
path = "src/bin/main.rs"

[dependencies]
crabllm-core = { workspace = true, features = ["gateway"] }
crabllm-provider.workspace = true
crabllm-proxy.workspace = true

# crates-io
arc-swap.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus.workspace = true
utoipa = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
