[package]
name = "crabllm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-performance LLM API gateway — binary"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming::http-server"]

[features]
default = ["hyper", "sonic", "http2", "native-tls", "openapi"]
hyper = ["crabllm-proxy/hyper"]
reqwest = ["crabllm-proxy/reqwest"]
http2 = ["crabllm-proxy/http2"]
native-tls = ["crabllm-proxy/native-tls"]
rustls = ["crabllm-proxy/rustls"]
sonic = ["crabllm-proxy/sonic"]
storage-redis = ["crabllm-proxy/storage-redis"]
storage-sqlite = ["crabllm-proxy/storage-sqlite"]
provider-bedrock = ["crabllm-provider/provider-bedrock"]
openapi = ["crabllm-proxy/openapi", "utoipa", "utoipa-scalar"]

[[bin]]
name = "crabllm"
path = "src/bin/main.rs"

[dependencies]
crabllm-core = { workspace = true, features = ["gateway"] }
crabllm-provider.workspace = true
crabllm-proxy = { workspace = true, default-features = false }

# crates-io
arc-swap.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus.workspace = true
utoipa = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
