[package]
name = "crabtalk"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
storage-sqlite = ["crabtalk-core/storage-sqlite"]

[[bin]]
name = "crabtalk"
path = "src/bin/main.rs"

[dependencies]
crabtalk-core.workspace = true
crabtalk-provider.workspace = true
crabtalk-proxy.workspace = true

# crates-io
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
