[package]
name = "crabtalk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-performance LLM API gateway — binary"
keywords = ["llm", "gateway", "proxy", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming::http-server"]

[features]
storage-redis = ["crabtalk-proxy/storage-redis"]
storage-sqlite = ["crabtalk-proxy/storage-sqlite"]
provider-bedrock = ["crabtalk-provider/provider-bedrock"]

[[bin]]
name = "crabtalk"
path = "src/bin/main.rs"

[dependencies]
crabtalk-core = { workspace = true, features = ["gateway"] }
crabtalk-provider.workspace = true
crabtalk-proxy.workspace = true

# crates-io
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
