[package]
name = "crabtalk-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Provider dispatch for the crabtalk LLM API gateway"
keywords = ["llm", "openai", "anthropic", "gemini", "bedrock"]
categories = ["web-programming::http-client", "network-programming"]

[features]
provider-bedrock = ["hmac", "sha2"]

[dependencies]
crabtalk-core.workspace = true

# crates-io
bytes.workspace = true
futures.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# optional (bedrock)
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
