[package]
name = "crabtalk-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "HTTP proxy server for the crabtalk LLM API gateway"
keywords = ["llm", "proxy", "openai", "streaming", "gateway"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
crabtalk-core.workspace = true
crabtalk-provider.workspace = true

# crates-io
axum.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
rand.workspace = true
